# little-tools

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  ios.cmake
ImageTools/: CMakeLists.txt
ImageTools/src/: giftoimages.cpp  main.cpp  pngslit.cpp
SecretManager/: CMakeLists.txt
SecretManager/src/: App.cpp  App.h  MainFrame.cpp  MainFrame.h  SecretDialog.cpp  SecretDialog.h  SecretManager.cpp  SecretManager.h  main.cpp
SecretManager/xcodeproj/SecretManager/SecretManager/: main.cpp
SecretManager/xcodeproj/SecretManager/SecretManager.xcodeproj/: project.pbxproj
assets/: Info.plist
